fix dark mode

--- a/src/pages/DetailNews/style.css
+++ b/src/pages/DetailNews/style.css
@@ -17,7 +17,6 @@
 
 .article table.picture {
   width: auto;
-  color: #888 !important;
   font-weight: 400;
   margin: 0 auto;
   margin-top: 16px;
@@ -183,7 +182,6 @@
 }
 
 .article .notebox {
-  background: #fffbf1;
   border: 1px solid #ff7d00;
   padding: 10px;
   text-align: left;
@@ -281,7 +279,6 @@
   font-size: 25px;
   line-height: 34px;
   margin-bottom: 8px !important;
-  color: #4E4E4E;
 }
 
 .article__title .icon-live {
@@ -460,7 +457,6 @@
 }
 
 .article__sapo {
-  color: #363636;
   font-size: 18px;
   font-weight: 600
 }
@@ -518,7 +514,6 @@
 }
 
 .article__tag .box-content a {
-  background: #fff;
   border-radius: 25px;
   margin-bottom: 16px;
   margin-right: 16px;
@@ -836,7 +831,6 @@
 }
 
 .related-news {
-  background: #fff;
   border: 1px solid #ddd;
   padding: 24px 33px 33px;
   margin-top: 16px
@@ -867,7 +861,6 @@
   font-weight: 600;
   font-size: 16px;
   line-height: 20px;
-  color: #343a40;
   padding-left: 20px;
   position: relative
 }
